# Lecturfier

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  bot.py  calctest.py  db.py  docker-compose.yaml  file_creator.py  flake.nix  graph_creator.py  pyproject.toml  quotes.json  renovate.json  requirements.txt  transfer.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: workflows
.github/workflows/: build.yaml  deploy-api.yaml  deploy-prod.yaml  deploy-staging.yaml  workflow.yml
Data/: schedule_default.json
api/: Dockerfile  gunicorn_config.py  pyproject.toml  server.py
cogs/: admin.py  amazon.py  aoc.py  buttons.py  draw.py  games.py  hangman.py  help.py  information.py  lecture_updates.py  mainbot.py  minesweeper.py  moderate.py  owner.py  player.py  quote.py  reputation.py  statistics.py  stealemote.py  updates.py  voice.py  voice_xp.py
cogs/lecture_updates/: lecture.py  slash.py  task.py
docs/: CNAME  index.html
helper/: file_creator.py  git_backup.py  git_tools.py  handySQL.py  hangman.py  image2queue.py  log.py
helper/lecture_scraper/: ad.py  dm.py  ep.py  helpers.py  la.py  scrape.py
helper/sql/: SQLFunctions.py  SQLTables.py
lecture_scraper/: ad.py  dm.py  ep.py  helpers.py  la.py  scrape.py
logs/: .placeholder
websites/: .placeholder
