[tool.poetry]
name = "lecturfier"
version = "0.1.0"
description = "Python Discord Bot with Lecture Updates and Quotes"
authors = ["markbeep <mrkswrn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "../Lecturfier"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.3"
async-timeout = "^4.0.2"
beautifulsoup4 = "^4.11.2"
colorthief = "^0.2.1"
discord-ext-menus = "^1.1"
"discord.py" = "2.6.4"
emoji = "^2.2.0"
honeybadger = "^0.23.0"
idna = "^3.4"
imageio = "^2.25.0"
numpy = "^1.24.2"
multidict = "^6.0.4"
Pillow = "^10.0.0"
psutil = "^5.9.4"
pytz = "^2022.7.1"
requests = "^2.28.2"
tabulate = "^0.9.0"
websockets = "^11.0.0"
apng = "^0.3.4"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "bot:run"
